@@ -21,8 +21,11 @@
 
 #include "ipmi-sensors-config.h"
 
-config_err_t convert_id_string (ipmi_sensors_config_state_data_t *state_data, 
-                                char *id_string);
+config_err_t create_section_name (ipmi_sensors_config_state_data_t *state_data, 
+                                  uint8_t *sdr_record,
+                                  unsigned int sdr_record_len,
+                                  char *section_name,
+                                  unsigned int section_name_len);
 
 config_err_t get_sdr_record (ipmi_sensors_config_state_data_t *state_data,
                              const char *section_name,
